--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
 			<h3>Sorry, something went wrong :(</h3>
 		</div>
 
+		<div class="empty page">
+			<h3>Sorry, no product matches the selected criteria</h3>
+		</div>
 	</div>
 
 
