--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 					{{/each}}
 				</script>
 			</ul>
-
+			<button>Clear Carts</button>
 		</div>
 		<div class="error page">
 			<h3>Sorry, something went wrong :(</h3>
