--- a/test.html
+++ b/test.html
@@ -2,12 +2,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.6.0.css">
-    <script src="https://code.jquery.com/qunit/qunit-2.6.0.js"></script>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.6.0.css">
+    <script src="https://code.jquery.com/qunit/qunit-2.6.0.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body>
-    <div id="qunit"></div>
-    <div id="qunit-fixture"></div>
+    <div id="qunit"></div>
+    <div id="qunit-fixture"></div>
 </body>
+<script src="assets/js/carts.js"></script>
 <script src="assets/js/test/test-carts.js"></script>
